--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   ],
   "scripts": {
     "start": "./node_modules/.bin/nodemon index.js",
-    "test": "NODE_ENV=test mocha --timeout 10000"
+    "test": "NODE_ENV=test mocha --timeout 2000"
   },
   "dependencies": {
     "async": "~0.2.9",
     "date.js": "~0.1.1",
+    "debug": "^2.2.0",
     "human-interval": "~0.1.3",
     "lodash": "~2.4.1",
     "moment": "~2.5.0",
