--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "date.js": "~0.1.1",
     "debug": "^2.2.0",
     "human-interval": "~0.1.3",
-    "lodash": "~2.4.1",
+    "lodash": "^3.10.1",
     "moment": "~2.5.0",
     "node-schedule": "~0.1.13",
     "q": "~1.0.0",
