--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "local-martinet",
+  "name": "martinet",
   "description": "Distributed job queue",
-  "version": "2.0.0",
+  "version": "1.0.2",
   "author": {
     "name": "Matthew Conlen",
     "email": "mc@mathisonian.com"
