--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "martinet",
   "description": "Distributed job queue",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": {
     "name": "Matthew Conlen",
     "email": "mc@mathisonian.com"
   },
   "main": "index",
-  "engines": {
-    "node": "0.10.x",
-    "npm": ">= 1.2.x"
-  },
   "licenses": [
     {
       "type": "MIT"
@@ -30,7 +26,7 @@
     "node-schedule": "~0.1.13",
     "q": "~1.0.0",
     "sequelize": "^1.7.10",
-    "zmq": "~2.5.1"
+    "zmq": "^2.14.0"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
