--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "debug": "^2.2.0",
     "human-interval": "~0.1.3",
     "lodash": "^3.10.1",
-    "moment": "~2.5.0",
+    "moment": "^2.10.6",
     "node-schedule": "~0.1.13",
-    "q": "~1.0.0",
+    "q": "~1.4.1",
     "sequelize": "^1.7.10",
-    "zmq": "^2.14.0"
+    "zmq": "~2.13.0"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
