--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "martinet",
   "description": "Distributed job queue",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "author": {
     "name": "Matthew Conlen",
     "email": "mc@mathisonian.com"
@@ -17,20 +17,20 @@
     "test": "NODE_ENV=test mocha --timeout 2000"
   },
   "dependencies": {
-    "async": "~0.2.9",
-    "date.js": "~0.1.1",
-    "debug": "^2.2.0",
-    "human-interval": "~0.1.3",
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6",
-    "node-schedule": "~0.1.13",
-    "q": "~1.4.1",
-    "sequelize": "^1.7.10",
-    "zmq": "~2.15.3"
+    "async": "~2.4.0",
+    "date.js": "~0.3.1",
+    "debug": "2.6.6",
+    "human-interval": "0.1.6",
+    "lodash": "4.17.4",
+    "moment": "2.18.1",
+    "node-schedule": "1.2.1",
+    "q": "1.5.0",
+    "sequelize": "3.30.4",
+    "zmq": "2.15.3"
   },
   "devDependencies": {
-    "expect.js": "^0.3.1",
-    "mocha": "^1.21.4",
+    "expect.js": "0.3.1",
+    "mocha": "3.3.0",
     "nodemon": "latest",
     "should": "latest",
     "sqlite3": "^3.0.0",
